package sample;

import java.util.ArrayList;

public class Errors {

    public Errors(){}
    NumericalMethods hello = new NumericalMethods();


}
