@startuml

title __DIFFRENTIAL_EQUATIONS_ASSIGNMENT's Class Diagram__\n

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Errors {
    }
  }
  

  namespace sample {
    class sample.Global_errors {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.NumericalMethods {
    }
  }
  

  sample.Controller o-- sample.Errors : Er
  sample.Controller o-- sample.Global_errors : Ger
  sample.Controller o-- sample.NumericalMethods : Nm
  sample.Errors o-- sample.NumericalMethods : hello
  sample.Global_errors o-- sample.NumericalMethods : yo
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
